# company-brain

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
web/: .env.example  DECISIONS.md  Dockerfile  README.md  RUNTIME.md  alembic.ini  pyproject.toml
web/backend/: app.py  auth.py  celery_app.py  claude_client.py  config.py  crypto.py  db.py  email_sender.py  llm_client.py  models.py  readiness.py  schemas.py  sse.py  tasks.py  tool_executors.py  vault.py
web/backend/migrations/: env.py
web/backend/routes/: activity.py  analytics.py  audit.py  auth.py  brains.py  escalations.py  events.py  experts.py  export.py  insights.py  interview.py  maintainer.py  relationships.py  runs.py  settings.py  tools.py  triggers.py  updates.py  vault.py
web/backend/tests/: conftest.py  test_auth.py  test_brains.py  test_experts.py  test_interview.py
web/data/: company-brain.db
web/docker/: Dockerfile
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/frontend/src/: App.tsx  main.tsx  types.ts
web/static/: index.html
web/static/assets/: index-7y-4v-Rj.js  index-B26jw2x-.js  index-BGmO_fdQ.css  index-BJs0y11B.css  index-BKYKMOsX.js  index-BNUY6ACj.js  index-BQNXIZ-x.js  index-BUzAp1VN.css  index-BYIfM8rW.js  index-BYnwU7PK.js  index-Be0eHeLG.js  index-BhCHvVbx.js  index-Bt7Ijq-T.js  index-C8NcQxBR.js  index-C8o0_KmS.js  index-CJ4FIN60.css  index-CRKWlM54.css  index-CRj8Gali.js  index-CbcuoUOw.css  index-CeZzuSZo.js  index-ClXJOS3l.js  index-CtzR3-W0.js  index-CxgJ8xa0.css  index-CzvZAeAD.js  index-DDhSKzcP.css  index-DKLQIJfr.js  (+10 more)
(+106 files in other folders)
