[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "company-brain"
version = "0.1.0"
description = "Operational intelligence runtime for AI-native companies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["anthropic>=0.40"]

[project.scripts]
companybrain = "builder.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["builder*"]

[tool.pytest.ini_options]
pythonpath = ["."]
