[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "company-brain-web"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "resend>=0.7",
    "cryptography>=42",
    "anthropic>=0.40",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
pythonpath = ["..", "."]
testpaths = ["backend/tests"]
